# Astar_algorithm

./: CMakeLists.txt  Test.txt.txt  main.cpp
Documentation/: Tasks.md
Graph_path_finding/: CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.5315c44  Commify.cpp  Commify.h  Data.qrc  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphPath.h  Ipq.cpp  Ipq.h  Vertex.cpp  Vertex.h  View.cpp  View.h  Window.cpp  Window.h  chip.cpp  chip.h  main.cpp  mainwindow.cpp  mainwindow.h  view.cpp
Graph_path_finding/Data/: all_vertices.txt  vertex_test.txt
Header_files/: Edge.h  Graph.h  Vertex.h
Scripts/: main.cpp
Source_files/: Edge.cpp  Graph.cpp  Vertex.cpp  classes.h
Subject/: Tasks.md  Vocabulary.txt
